--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.1.2
 django-crispy-forms==1.9.2
 django-filter==2.4.0
 gunicorn==20.0.4
+Pillow==8.0.1
 psycopg2==2.8.6
 pytz==2020.1
 selenium==3.141.0
