--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.5.0
 Django==3.1.2
 django-crispy-forms==1.9.2
 django-filter==2.4.0
+djangorestframework==3.12.2
 gunicorn==20.0.4
 Pillow==8.0.1
 psycopg2==2.8.6
